--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -200,3 +200,21 @@ div.pane-content{
 /*--------------------------------------------*/
 /*---> STATISTICS <---------------------------*/
 /*--------------------------------------------*/
+
+div#radial-pie{
+
+	width: 100%;
+
+	.background{
+		fill: transparent;
+	}
+
+	.arc{
+		fill: blue;
+	}
+
+	text{
+		font-family: "Bitter";
+	}
+
+}
