--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -123,13 +123,58 @@ header{
 
 div.tabs-container{
 	width: 100vw;
-	height: @tabHeight;
+	height: @tabHeight + 1vh;
 	background: url('retinaWood.png');
+	overflow-x: scroll;
+	overflow-y: hidden;
+	//border-bottom: 1vh solid @ecoGreen;
+}
+
+div.tabs-container{
+
+	@scrollBar: @ecoGreen;
+	@scrollBarBack: @charcoal;
+
+	&::-webkit-scrollbar{
+		width: 10px;
+		height: 10px;
+		background: @scrollBarBack;
+	}
+
+	&::-webkit-scrollbar-button{
+		background: @scrollBarBack;
+	}
+
+	&::-webkit-scrollbar-track{
+		background: @scrollBarBack;
+	}
+
+	::-webkit-scrollbar-track-piece{
+		background: @scrollBarBack;
+	}
+
+	&::-webkit-scrollbar-thumb{
+		background: @scrollBar;
+		border-radius: 0;
+		position: absolute;
+		margin-left: -10px;
+	}
+
+	&::-webkit-scrollbar-corner{
+		width: 10px;
+		height: 10px;
+		background: @scrollBarBack;
+	}
+
+	&::-webkit-resizer{
+		background: @scrollBarBack;
+	}
+
 }
 
 ul.tabs-list{
-	width: 100vw;
-	border-bottom: 1vh solid @ecoGreen;
+	width: 6 * 7.5 * @textSize;
+	height: @tabHeight;
 }
 
 li.tab{
@@ -140,10 +185,10 @@ li.tab{
 
 	@spacing: 1.5vh;
 	margin-top: @spacing;
-	margin-left: 0.25vw;
+	margin-left: 1vw;
 	padding: 0 @spacing;
-	display: inline-block;
-	width: 16vw;
+	float: left;
+	width: 6.0 * @textSize;
 	height: @tabHeight - @spacing;
 	line-height: @tabHeight - @spacing;
 	background: @charcoal;
