Styled data text

--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -252,7 +252,7 @@ div.pane-content{
 div#radial-pie{
 
 	.radial-svg{
-		width: 50vw;
+		width: 170px;
 	}
 
 	.component{
@@ -274,7 +274,7 @@ div#radial-pie{
 	}
 
 	.arc2{
-		fill: blue;
+		fill: @charcoal;
 	}
 
 	.labels{
@@ -286,6 +286,19 @@ div#radial-pie{
 		font-family: "Bitter";
 		font-weight: bold;
 		fill: @charcoal;
+	}
+
+}
+
+div#scaled-text{
+
+	span{
+		color: @ecoGreen;
+	}
+
+	p{
+		text-align: left;
+		width: 75%;
 	}
 
 }
