Kind of sort of ugly scaled text

--- a/style/stats-style.less
+++ b/style/stats-style.less
@@ -292,13 +292,16 @@ div#radial-pie{
 
 div#scaled-text{
 
+	width: 14.0 * @textSize;
+	margin: 0 auto;
+
 	span{
 		color: @ecoGreen;
 	}
 
 	p{
 		text-align: left;
-		width: 75%;
+		margin-bottom: @textSize;
 	}
 
 }
