--- a/style/styles.less
+++ b/style/styles.less
@@ -646,14 +646,22 @@ div.popup{
 		height: 3.0 * @textSize;
 		line-height: 3.0 * @textSize;
 		padding: 0 (1 * @textSize);
+		margin: 0.5 * @textSize auto;
 		color: white;
 		font-family: "Bitter";
 		font-size: 2.0 * @textSize;
 		text-align: center;
+
+		&:hover{
+			background: @lightGreen;
+		}
+
+		.AnimateAll();
+
 	}
 
 	button.small{
-		background: gray;
+		background: #DDD;
 		height: 1.5 * @textSize;
 		line-height: 1.5 * @textSize;
 		font-size: 1.0 * @textSize;
